--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,8 @@ BASE_URL=http://localhost:5173
 
 # Frontend ENV
 VITE_API_BASE_URL=http://localhost:3000
+
+# Container
+EMAIL=
+MAIN_DOMAIN=
+TRAEFIK_AUTH=
