--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,40 +5,40 @@ services:
   # Web Server / Reverse Proxy
   # ------------------
   traefik:
-    image: "traefik:v3.1" # <-- Disarankan pin versi
+    image: "traefik:v3.1"
     container_name: traefik
     command:
       - "--api.dashboard=true"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
+      - "--providers.docker.network=webnet"
       - "--entrypoints.web.address=:80"
       - "--entrypoints.websecure.address=:443"
       - "--certificatesresolvers.mytlschallenge.acme.tlschallenge=true"
-      - "--certificatesresolvers.mytlschallenge.acme.email=${EMAIL}" # Pastikan ada di .env
+      - "--certificatesresolvers.mytlschallenge.acme.email=${EMAIL}"
       - "--certificatesresolvers.mytlschallenge.acme.storage=/letsencrypt/acme.json"
-      # Middleware global untuk redirect HTTP ke HTTPS
+      # Redirect HTTP -> HTTPS
       - "--entrypoints.web.http.redirections.entrypoint.to=websecure"
       - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - "letsencrypt-data:/letsencrypt" # <-- Diperbaiki menggunakan volume bernama
+      - "letsencrypt-data:/letsencrypt"
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
     networks:
       - webnet
     restart: unless-stopped
     labels:
       - "traefik.enable=true"
-      # Router untuk Dashboard Traefik (sudah aman via HTTPS)
-      - "traefik.http.routers.dashboard.rule=Host(`traefik.${MAIN_DOMAIN}`)" # Pastikan ada di .env
+      # Dashboard
+      - "traefik.http.routers.dashboard.rule=Host(`traefik.${MAIN_DOMAIN}`)"
       - "traefik.http.routers.dashboard.service=api@internal"
       - "traefik.http.routers.dashboard.entrypoints=websecure"
       - "traefik.http.routers.dashboard.tls.certresolver=mytlschallenge"
       - "traefik.http.routers.dashboard.middlewares=auth"
-      # Middleware untuk otentikasi dashboard
-      - "traefik.http.middlewares.auth.basicauth.users=${TRAEFIK_AUTH}" # Pastikan ada di .env
-      # Middleware global untuk header keamanan
+      # Basic auth & security headers
+      - "traefik.http.middlewares.auth.basicauth.users=${TRAEFIK_AUTH}"
       - "traefik.http.middlewares.secure-headers.headers.forceSTSHeader=true"
       - "traefik.http.middlewares.secure-headers.headers.stsSeconds=31536000"
       - "traefik.http.middlewares.secure-headers.headers.stsIncludeSubdomains=true"
@@ -50,7 +50,7 @@ services:
   # Database
   # ------------------
   db:
-    image: postgres:16.3-alpine # Pin versi spesifik lebih baik
+    image: postgres:16.10-alpine
     container_name: db_postgres
     environment:
       POSTGRES_USER: ${DATABASE_USER}
@@ -74,6 +74,7 @@ services:
   # ------------------
   backend:
     image: ghcr.io/chandra-bachtiar/pmb-backend:latest
+    pull_policy: always
     container_name: backend
     restart: unless-stopped
     env_file:
@@ -82,7 +83,7 @@ services:
       - DATABASE_HOST=db
     depends_on:
       db:
-        condition: service_healthy # Menunggu DB benar-benar siap
+        condition: service_healthy
     networks:
       - webnet
     labels:
@@ -90,14 +91,16 @@ services:
       - "traefik.http.routers.backend.rule=Host(`backend.${MAIN_DOMAIN}`)"
       - "traefik.http.routers.backend.entrypoints=websecure"
       - "traefik.http.routers.backend.tls.certresolver=mytlschallenge"
-      - "traefik.http.routers.backend.middlewares=secure-headers" # Menerapkan header keamanan global
-      - "traefik.http.services.backend.loadbalancer.server.port=3000" # Asumsi backend berjalan di port 3000
+      - "traefik.http.routers.backend.middlewares=secure-headers"
+      - "traefik.http.services.backend.loadbalancer.server.port=3000"
+      - "com.centurylinklabs.watchtower.enable=true"
 
   # ------------------
   # Frontend App
   # ------------------
   frontend:
     image: ghcr.io/chandra-bachtiar/pmb-frontend:latest
+    pull_policy: always
     container_name: frontend_app
     networks:
       - webnet
@@ -107,8 +110,20 @@ services:
       - "traefik.http.routers.frontend.rule=Host(`ppdb.${MAIN_DOMAIN}`)"
       - "traefik.http.routers.frontend.entrypoints=websecure"
       - "traefik.http.routers.frontend.tls.certresolver=mytlschallenge"
-      - "traefik.http.routers.frontend.middlewares=secure-headers" # Menerapkan header keamanan global
-      - "traefik.http.services.frontend.loadbalancer.server.port=80" # Asumsi frontend (nginx) berjalan di port 80
+      - "traefik.http.routers.frontend.middlewares=secure-headers"
+      - "traefik.http.services.frontend.loadbalancer.server.port=80"
+      - "com.centurylinklabs.watchtower.enable=true"
+
+  # ------------------
+  # Auto Updater (opsional)
+  # ------------------
+  watchtower:
+    image: containrrr/watchtower
+    container_name: watchtower
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    command: --interval 300 --cleanup --label-enable
+    restart: unless-stopped
 
 # ------------------
 # Volumes & Networks
