--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,7 @@ VITE_API_BASE_URL=http://localhost:3000
 EMAIL=
 MAIN_DOMAIN=
 TRAEFIK_AUTH=
+
+# PGAdmin
+PGADMIN_DEFAULT_EMAIL=
+PGADMIN_DEFAULT_PASSWORD=
