--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,6 +125,37 @@ services:
     command: --interval 300 --cleanup --label-enable
     restart: unless-stopped
 
+  # ------------------
+  # pgAdmin (DB Manager)
+  # ------------------
+  pgadmin:
+    image: dpage/pgadmin4:9.8.0
+    container_name: pgadmin
+    env_file:
+      - .env
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+      PGADMIN_CONFIG_ENHANCED_COOKIE_PROTECTION: "True"
+      PGADMIN_CONFIG_CONSOLE_LOG_LEVEL: "30"
+      TZ: ${TZ}
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - webnet
+    restart: unless-stopped
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.pgadmin.rule=Host(`pgadmin.${MAIN_DOMAIN}`)"
+      - "traefik.http.routers.pgadmin.entrypoints=websecure"
+      - "traefik.http.routers.pgadmin.tls.certresolver=mytlschallenge"
+      - "traefik.http.routers.pgadmin.middlewares=secure-headers,auth"
+      - "traefik.http.services.pgadmin.loadbalancer.server.port=80"
+
+
 # ------------------
 # Volumes & Networks
 # ------------------
