--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,7 @@ TRAEFIK_AUTH=
 # PGAdmin
 PGADMIN_DEFAULT_EMAIL=
 PGADMIN_DEFAULT_PASSWORD=
+
+# Watchtower
+WATCHTOWER_NOTIFICATIONS=
+WATCHTOWER_NOTIFICATION_URL=
