--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -124,6 +124,9 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     command: --interval 300 --cleanup --label-enable
     restart: unless-stopped
+    environment:
+      WATCHTOWER_NOTIFICATIONS: ${WATCHTOWER_NOTIFICATION_URL}
+      WATCHTOWER_NOTIFICATION_URL: ${WATCHTOWER_NOTIFICATION_URL}
 
   # ------------------
   # pgAdmin (DB Manager)
