delete registry and add .docker config volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,7 +122,8 @@ services:
     container_name: watchtower
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    command: --interval 300 --cleanup --label-enable --registry-auth
+      - /root/.docker:/config:ro
+    command: --interval 300 --cleanup --label-enable
     restart: unless-stopped
     environment:
       WATCHTOWER_NOTIFICATIONS: ${WATCHTOWER_NOTIFICATIONS}
